--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "ssr",
+  "name": "ssr-app",
   "version": "1.0.0",
-  "description": "",
-  "main": ".babelrc.js",
+  "description": "React Server Side rendering app",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "SSR"
+    "SSR",
+    "REACT"
   ],
   "author": "HASSAN AMJAD",
   "license": "MIT",
   "dependencies": {
+    "build": "^0.1.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
-    "webpack": "^2.1.0-beta.22",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
 }
